v0.61.2 (2024-04-01)

- Actually check it driver processes have exited, instead of sleeping the
  expected length, before killing client processes

v0.61.1 (2024-03-19)

- Fix post-process unit test for sqlite3
- Remove SAPDB support
- Add --rows-per-commit to `build` script to pass on through to database
  specific scripts to pass to datagen.
- Install python into the AppImage again for easier management of the
  environment and dependencies of python packages
- Fix AppImage use of rst2html5 with manual override of !# in rst2html5 to use
  python in the AppImage environment
- Build Pango for AppImage with reduced dependencies
- Bump touchstone-tools version to v0.8.0 in AppImage

v0.61.0 (2024-03-14)

- Support TOML configuration files for executing tests with `run` script
- Update `run` script to use PID files to stop processes instead of killall
  with program names
- Refactor `run` script output
- Reorganize documentation

v0.60.0 (2024-02-29)

- driver3 will now continually attempt to retry connecting to the database
  for the duration of the test if the database connectivity code returns a
  RECONNECT code
- libpq interface now returns a RECONNECT code if a PGRES_FATAL_ERROR is
  returned from any database call
- Add -retry-delay flag to driver3 to adjust the delay between
- Remove lingering hard coded fontconfig path from AppImage
- Fix check for existing database in pgsql-create-db
- Use CREATE DATABASE SQL statement instead of createdb binary in
  pgsql-create-db
- Use VACUUM SQL statement insetead of vacuumdb binary in pgsql-build-db
- Remove unnecessary binaries from AppImage
- Create AppImage on Debian 10 (buster), previously Ubuntu 14.04 (Trust Tahr)
- Bump minimum CMake version to 3.5 per deprecation warnings
- Use Linux system call to get thread id instead of using the thread's address
- Fix `run` script execution of stats and profile collection for 1-tier tests
- Add --row-per-commit to datagen to control the number of rows loaded before